--- a/PáginaInicial/css/style.css
+++ b/PáginaInicial/css/style.css
@@ -11,26 +11,63 @@
 
 .fundoSite{
     display: flex;
-    background-color: #293338;
     background: linear-gradient(135deg, #43535c, #061525, #071d36);
     width: 100%;
-    height: 100vh;
-    justify-content: center;
-    align-items: flex-start;
+    min-height: 100vh;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.header{
+    background-color: rgba(3, 17, 20, 0);
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+.logo{
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+}
+
+.links{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    gap: 100px;
+    padding-inline: 20px;
+    
+}
+
+.links a{
+    font-size: 25px;
+}
+
+@keyframes tremer {
+    0% { transform: translate(0);}
+    25% { transform: translate(-6px, 0); }
+    50% { transform: translate(6px, 0); }
+    75% { transform: translate(-2px, 0); }
+    100% { transform: translate(0);}
 }
 
 .telaPrincipal{
     display: flex;
     background-color: #0a1016b9;
+    animation: tremer 0.2s ease-in-out infinite;
     justify-content: center;
     align-items: flex-start;
-    width: 90%;
+    width: 95%;
     min-height: 80vh;
-    margin-top: 5%;
     border-radius: 50px;
     border: 1px solid rgb(255, 255, 255);
     background-image: 
-        radial-gradient(2px 2px at 10vw 10vh, rgb(255, 255, 255), transparent),
+        radial-gradient(200px 200px at 1vw 7vh, rgba(255, 255, 255, 0.226), transparent),
         radial-gradient(2px 2px at 20vw 30vh, rgba(255, 255, 255), transparent),
         radial-gradient(2px 2px at 30vw 60vh, rgba(255, 255, 255), transparent),
         radial-gradient(2px 2px at 50vw 50vh, rgba(255, 255, 255), transparent),
@@ -76,7 +113,8 @@
         radial-gradient(2px 2px at 85vw 10vh, rgba(255, 255, 255), transparent),
         radial-gradient(2px 2px at 25vw 45vh, rgba(255, 255, 255), transparent),
         radial-gradient(2px 2px at 65vw 25vh, rgba(255, 255, 255), transparent),
-        radial-gradient(2px 2px at 35vw 15vh, rgba(255, 255, 255), transparent);
+        radial-gradient(2px 2px at 35vw 15vh, rgba(255, 255, 255), transparent),
+        radial-gradient(400px 400px at 90vw 70vh, rgba(10, 4, 44, 0.89), transparent);
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
     background-blend-mode: overlay;
@@ -91,4 +129,5 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: -1;
+    border-radius: 50px;
 }
